--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+    <meta name="Description" content="Love Running. Club for running in Dublin, Ireland. Urban running, trail running. Dublin docklands and phoenix park.">
+    <meta name="keywords" content="love running, run, running club, runners, Dublin, Ireland, sports,exercise">
     <!-- title-->
     <title>Love running</title>
     <!-- Links to favicon -->
