adds other logos and styles

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <main>Main Content</main>
     <!-- footer -->
     <footer>
-      <ul>
+      <ul id="social-networks">
         <li>
           <a
             href="https://en-gb.facebook.com/"
