--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
       </nav>
     </header>
     <!-- main content -->
-    <main>Main Content</main>
+    <main>
+        <section id="hero"></section>
+    </main>
     <!-- footer -->
     <footer>
       <ul id="social-networks">
