--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
     </header>
     <!-- main content -->
     <main>
-        <section id="hero"></section>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docks and Phoenix park</h3>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer>
