--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
             </ul>
         </nav>
     </header>
-    <!-- main content -->
+    <!-- Main content -->
     <main>
         <section id="gallery">
             <div id="photos">
@@ -57,8 +57,10 @@
                 <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
                 <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
                 <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
-                <img src="assets/images/running_gang.webp" alt="Large group of runners taking part in a marathon on a rainy day">
-                <img src="assets/images/mud-run.webp" alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+                <img src="assets/images/running_gang.webp"
+                    alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/images/mud-run.webp"
+                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
             </div>
         </section>
     </main>
